--- a/index.html
+++ b/index.html
@@ -1,363 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Floorball Team Picker</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #f9f9f9;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    h1 {
-      padding: 12px;
-      background: #3a52a3;
-      text-align: center;
-      border-radius: 8px;
-      color: #fff;
-      font-size: clamp(1.5rem, 5vw, 2rem);
-    }
-    textarea, input {
-      width: 100%;
-      display: block;
-      margin: 6px auto 12px auto;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-      box-sizing: border-box;
-    }
-    textarea {
-      resize: none;
-      min-height: 100px;
-    }
-    .button-wrapper {
-      display: flex;
-      justify-content: center;
-    }
-    .image-button {
-      display: block;
-      margin: 0 auto;
-      width: 85px;
-      height: auto;
-      cursor: pointer;
-      filter: invert(29%) sepia(74%) saturate(488%) hue-rotate(189deg) brightness(100%) contrast(103%);
-      transition: transform 0.15s ease;
-    }
-    .image-button:hover { transform: scale(1.1); }
-    .image-button:active { transform: scale(0.95); }
-    #buttonText {
-      text-align: center;
-      font-size: 0.95rem;
-      color: #555;
-      margin-top: 10px;
-    }
-    .team {
-      background: #fff;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: 1px solid #ddd;
-    }
-    .chips-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 6px;
-    }
-    #clearChipsBtn {
-      background: #3a52a3;
-      color: white;
-      border: none;
-      border-radius: 16px;
-      padding: 6px 12px;
-      cursor: pointer;
-      font-size: 0.9rem;
-      transition: background 0.2s ease, transform 0.1s ease, opacity 0.3s ease;
-      opacity: 0;
-      pointer-events: none;
-    }
-    #clearChipsBtn.visible {
-      opacity: 1;
-      pointer-events: auto;
-    }
-    #clearChipsBtn:hover { background: #516fd3; }
-    #clearChipsBtn:active { transform: scale(0.95); }
-    .chips-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin: 8px 0 12px 0;
-    }
-    .chip {
-      padding: 8px 14px;
-      background: #e0e0e0;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 0.95rem;
-      transition: all 0.2s ease;
-      user-select: none;
-    }
-    .chip:hover { background: #d0d0d0; }
-    .chip.selected {
-      background: #3a52a3;
-      color: white;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    }
-    .team-size-container {
-      display: flex;
-      gap: 8px;
-      margin: 6px 0 12px 0;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Floorball Team Picker</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+/* --- Base Styles --- */
+body {
+  font-family: Arial, sans-serif;
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  background: #f9f9f9;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+h1 {
+  padding: 12px;
+  background: #3a52a3;
+  text-align: center;
+  border-radius: 8px;
+  color: #fff;
+}
+textarea, input {
+  width: 100%;
+  margin-top: 6px;
+  padding: 12px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+.chips-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 12px;
+}
+.chip {
+  padding: 8px 14px;
+  background: #e0e0e0;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.chip.selected {
+  background: #3a52a3;
+  color: white;
+}
+
+/* --- Teamsheet Mode --- */
+.team {
+  background: white;
+  border: 1px solid #ddd;
+  padding: 14px;
+  border-radius: 10px;
+  margin-top: 12px;
+}
+
+.team-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.teamsheet {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 20px;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.player-icon {
+  width: 60px;
+  height: 60px;
+  background: #3a52a3;
+  border-radius: 50%;
+  margin: auto;
+}
+
+.player-name {
+  margin-top: 6px;
+  font-weight: 600;
+}
+</style>
 </head>
+
 <body>
-  <h1>Floorball Team Picker</h1>
+<h1>Floorball Team Picker</h1>
 
-  <div class="chips-header">
-    <label>The usual suspects:</label>
-    <button id="clearChipsBtn" type="button" onclick="clearAllPlayers()">Clear All</button>
-  </div>
-  <div id="playerChips" class="chips-container"></div>
+<!-- Player Chips -->
+<div class="chips-header"><strong>The usual suspects:</strong></div>
+<div id="playerChips" class="chips-container"></div>
 
-  <div class="chips-header">
-    <label>Goalies:</label>
-  </div>
-  <div id="goalieChips" class="chips-container"></div>
+<div class="chips-header"><strong>Goalies:</strong></div>
+<div id="goalieChips" class="chips-container"></div>
 
-  <label for="names">Enter additional players (comma separated):</label>
-  <textarea id="names" rows="5" placeholder="Gretzky, McLovin, ..."></textarea>
+<label>Enter additional players (comma separated):</label>
+<textarea id="names" placeholder="Gretzky, McLovin, ..."></textarea>
 
-  <label for="teamSize">Team size:</label>
-  <div class="team-size-container">
-    <div class="chip" onclick="selectTeamSize(3, this)">3</div>
-    <div class="chip" onclick="selectTeamSize(5, this)">5</div>
-  </div>
-  <input type="number" id="teamSize" min="1" placeholder="e.g. 3">
+<label>Team size:</label>
+<div id="teamSizeChips" class="chips-container">
+  <div class="chip" onclick="selectTeamSize(3, this)">3</div>
+  <div class="chip" onclick="selectTeamSize(5, this)">5</div>
+</div>
+<input type="number" id="teamSize" placeholder="3">
 
-  <div class="button-wrapper">
-    <img src="Floorball_Blk@2x.png" alt="Generate Teams" class="image-button" onclick="generateTeams()">
-  </div>
-  <p id="buttonText">Click the floorball to generate teams</p>
+<button onclick="generateTeams()">Generate Teams</button>
 
-  <h2>Teams:</h2>
-  <div id="output"></div>
+<h2>Teams:</h2>
+<div id="output"></div>
 
-  <div id="exportToolbar" style="display: none; justify-content: center; gap: 10px; margin-top: 12px; flex-wrap: wrap;">
-    <button id="saveImageBtn" onclick="saveTeamsAsImage()" class="toolbar-btn">Save as Image</button>
-    <button id="shareTeamsBtn" onclick="shareTeams()" class="toolbar-btn">Share Teams</button>
-  </div>
+<script>
+/* -----------------------------
+   Data + UI Setup
+-------------------------------- */
+const commonPlayers = ["Brunchie", "Colin W-B", "Nabber", "Ben", "Bill", "Ron", "Eugene"];
+const goalies = ["Colin D", "Sam", "ClothGimp"];
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+document.addEventListener("DOMContentLoaded", () => {
+  createChips(commonPlayers, "playerChips", togglePlayer);
+  createChips(goalies, "goalieChips", toggleGoalie);
+});
 
- <script>
-  function shuffle(array) {
-    for (let i = array.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [array[i], array[j]] = [array[j], array[i]];
-    }
+/* -----------------------------
+   Helper Functions
+-------------------------------- */
+function shuffle(arr) {
+  for (let i = arr.length - 1; i > 0; i--) {
+    let j = Math.floor(Math.random() * (i + 1));
+    [arr[i], arr[j]] = [arr[j], arr[i]];
   }
+}
 
-  function generateTeams() {
-    let names = document.getElementById("names").value.split(",").map(n => n.trim()).filter(n => n);
-    let teamSize = parseInt(document.getElementById("teamSize").value);
-    const selectedGoalies = getSelectedGoalies();
-    if (!teamSize || teamSize < 1) {
-      alert("Please enter a valid team size.");
-      return;
-    }
-
-    shuffle(names);
-    const teamNames = [
-      "The Five-Hole Fiddlers", "Goal Diggers", "Ball Blazers", "Stick Flickers", "The Mighty Dangles",
-      "Deez Sticks", "Floor Fury", "The Dirty Dekes", "Stickflix and Chill", "The Deflectors",
-      "Ballz Deep", "Just the Tip-Ins", "The Slap and Tickles",
-    ];
-    shuffle(teamNames);
-
-    let output = "";
-    let numTeams = Math.floor(names.length / teamSize);
-    if (numTeams === 0) {
-      output = "<p>Not enough players for the chosen team size.</p>";
-    } else {
-      for (let i = 0; i < numTeams; i++) {
-        let team = names.slice(i * teamSize, (i + 1) * teamSize);
-        let teamName = teamNames[i % teamNames.length];
-        if (selectedGoalies.length > 0) {
-          const goalie = selectedGoalies[i % selectedGoalies.length];
-          team.unshift(goalie + " (G)");
-        }
-        output += `<div class="team"><strong>${teamName}:</strong> ${team.join(", ")}</div>`;
-      }
-      let leftovers = names.slice(numTeams * teamSize);
-      if (leftovers.length) {
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(`<div>${output}</div>`, "text/html");
-        const teamDivs = doc.querySelectorAll(".team");
-        leftovers.forEach((player, i) => {
-          const team = teamDivs[i % teamDivs.length];
-          if (team) {
-            const strong = team.querySelector("strong");
-            let existingText = strong.nextSibling ? strong.nextSibling.textContent.trim() : "";
-            if (existingText.length > 0) {
-              strong.nextSibling.textContent = existingText + ", " + player;
-            } else {
-              strong.insertAdjacentText("afterend", " " + player);
-            }
-          }
-        });
-        output = doc.body.innerHTML;
-      }
-    }
-    document.getElementById("output").innerHTML = output;
-  }
-
-  const commonPlayers = ["Brunchie", "Colin W-B", "Nabber", "Ben", "Bill", "Ron", "Eugene"];
-  const goalies = ["Colin D", "Sam", "ClothGimp"];
-
-  function createGoalieChips() {
-    const container = document.getElementById("goalieChips");
-    container.innerHTML = "";
-    goalies.forEach(name => {
-      const chip = document.createElement("div");
-      chip.className = "chip";
-      chip.textContent = name;
-      chip.onclick = () => toggleGoalie(name, chip);
-      container.appendChild(chip);
-    });
-  }
-
-  function toggleGoalie(name, chip) {
-    chip.classList.toggle("selected");
-  }
-
-  function getSelectedGoalies() {
-    return Array.from(document.querySelectorAll("#goalieChips .chip.selected")).map(c => c.textContent);
-  }
-
-  function syncGoalieChips() {
-    document.querySelectorAll("#goalieChips .chip").forEach(chip => {
-      if (chip.classList.contains("selected")) chip.classList.add("selected");
-    });
-  }
-
-  function createPlayerChips() {
-    const container = document.getElementById("playerChips");
-    container.innerHTML = "";
-    commonPlayers.forEach(name => {
-      const chip = document.createElement("div");
-      chip.className = "chip";
-      chip.textContent = name;
-      chip.onclick = () => togglePlayer(name, chip);
-      container.appendChild(chip);
-    });
-  }
-
-  function togglePlayer(name, chip) {
-    const textarea = document.getElementById("names");
-    let names = textarea.value.split(",").map(n => n.trim()).filter(n => n);
-    if (names.includes(name)) {
-      names = names.filter(n => n !== name);
-      chip.classList.remove("selected");
-    } else {
-      names.push(name);
-      chip.classList.add("selected");
-    }
-    textarea.value = names.join(", ");
-    updateClearButtonVisibility();
-  }
-
-  function syncChipsWithTextarea() {
-    const textarea = document.getElementById("names");
-    const names = textarea.value.split(",").map(n => n.trim()).filter(n => n);
-    document.querySelectorAll("#playerChips .chip").forEach(chip => {
-      if (names.includes(chip.textContent)) chip.classList.add("selected");
-      else chip.classList.remove("selected");
-    });
-    updateClearButtonVisibility();
-  }
-
-  /* ✅ Clear all players AND goalies */
-  function clearAllPlayers() {
-    document.getElementById("names").value = "";
-    document.querySelectorAll("#playerChips .chip").forEach(chip => chip.classList.remove("selected"));
-    document.querySelectorAll("#goalieChips .chip").forEach(chip => chip.classList.remove("selected"));
-    updateClearButtonVisibility();
-  }
-
-  function updateClearButtonVisibility() {
-    const textarea = document.getElementById("names");
-    const btn = document.getElementById("clearChipsBtn");
-    const hasPlayers = textarea.value.trim().length > 0;
-    btn.classList.toggle("visible", hasPlayers);
-  }
-
-  const originalGenerateTeams = generateTeams;
-  generateTeams = function() {
-    originalGenerateTeams();
-    syncChipsWithTextarea();
-    syncGoalieChips();
-    syncTeamSizeChips();
-    toolbar.style.display = document.getElementById("output").innerText.trim() ? "flex" : "none";
-  };
-
-  function selectTeamSize(size, chip) {
-    document.getElementById("teamSize").value = size;
-    document.querySelectorAll(".team-size-container .chip").forEach(c => c.classList.remove("selected"));
-    chip.classList.add("selected");
-  }
-
-  function syncTeamSizeChips() {
-    const value = parseInt(document.getElementById("teamSize").value);
-    document.querySelectorAll(".team-size-container .chip").forEach(chip => {
-      if (parseInt(chip.textContent) === value) chip.classList.add("selected");
-      else chip.classList.remove("selected");
-    });
-  }
-
-  function saveTeamsAsImage() {
-    const output = document.getElementById("output");
-    if (!output.innerText.trim()) {
-      alert("No teams to save yet!");
-      return;
-    }
-    html2canvas(output, { backgroundColor: '#f9f9f9', scale: 2 }).then(canvas => {
-      const link = document.createElement("a");
-      link.download = "floorball_teams.png";
-      link.href = canvas.toDataURL("image/png");
-      link.click();
-    });
-  }
-
-  function shareTeams() {
-    const output = document.getElementById("output").innerText.trim();
-    if (!output) {
-      alert("No teams to share yet!");
-      return;
-    }
-    if (navigator.share) {
-      navigator.share({ title: "Floorball Teams", text: output })
-        .catch(err => console.log("Share cancelled:", err));
-    } else {
-      alert("Sharing not supported on this device/browser. Try saving instead.");
-    }
-  }
-
-  const toolbar = document.getElementById("exportToolbar");
-
-  window.addEventListener("DOMContentLoaded", () => {
-    createPlayerChips();
-    createGoalieChips();
-    document.getElementById("names").addEventListener("input", syncChipsWithTextarea);
-    document.getElementById("teamSize").addEventListener("input", syncTeamSizeChips);
-    updateClearButtonVisibility();
-    syncTeamSizeChips();
+function createChips(list, containerId, handler) {
+  const container = document.getElementById(containerId);
+  list.forEach(name => {
+    const chip = document.createElement("div");
+    chip.className = "chip";
+    chip.textContent = name;
+    chip.onclick = () => handler(name, chip);
+    container.appendChild(chip);
   });
+}
+
+function togglePlayer(name, chip) {
+  chip.classList.toggle("selected");
+  syncTextareaFromChips();
+}
+
+function toggleGoalie(name, chip) {
+  chip.classList.toggle("selected");
+}
+
+function selectTeamSize(size, chip) {
+  document.getElementById("teamSize").value = size;
+  document.querySelectorAll("#teamSizeChips .chip").forEach(c => c.classList.remove("selected"));
+  chip.classList.add("selected");
+}
+
+function syncTextareaFromChips() {
+  const selected = Array.from(document.querySelectorAll("#playerChips .chip.selected")).map(c => c.textContent);
+  document.getElementById("names").value = selected.join(", ");
+}
+
+function getPlayers() {
+  const textareaNames = document.getElementById("names").value
+    .split(",")
+    .map(n => n.trim())
+    .filter(n => n.length);
+  return textareaNames;
+}
+
+function getSelectedGoalies() {
+  return Array.from(document.querySelectorAll("#goalieChips .chip.selected"))
+    .map(c => c.textContent);
+}
+
+/* -----------------------------
+   Team Generation
+-------------------------------- */
+function generateTeams() {
+  let players = getPlayers();
+  const teamSize = parseInt(document.getElementById("teamSize").value);
+  const selectedGoalies = getSelectedGoalies();
+
+  if (!teamSize || teamSize < 1) {
+    alert("Enter a valid team size");
+    return;
+  }
+
+  shuffle(players);
+
+  const numTeams = Math.floor(players.length / teamSize);
+  if (numTeams === 0) {
+    document.getElementById("output").innerHTML = "<p>Not enough players.</p>";
+    return;
+  }
+
+  const teams = [];
+
+  for (let i = 0; i < numTeams; i++) {
+    teams.push(players.splice(0, teamSize));
+  }
+
+  // Distribute leftovers to teams evenly
+  let idx = 0;
+  while (players.length) {
+    teams[idx % numTeams].push(players.shift());
+    idx++;
+  }
+
+  // Insert rotating goalies
+  teams.forEach((team, i) => {
+    if (selectedGoalies.length) {
+      const goalie = selectedGoalies[i % selectedGoalies.length] + " (G)";
+      team.unshift(goalie);
+    }
+  });
+
+  // Render them
+  renderTeams(teams, teamSize);
+}
+
+/* -----------------------------
+   Rendering Logic
+-------------------------------- */
+function renderTeams(teams, size) {
+  const teamNames = [
+    "The Five-Hole Fiddlers", "Goal Diggers", "Ball Blazers", "Stick Flickers",
+    "The Mighty Dangles", "Deez Sticks", "Floor Fury", "The Dirty Dekes",
+    "Stickflix and Chill", "The Deflectors", "Ballz Deep",
+    "Just the Tip-Ins", "The Slap and Tickles",
+  ];
+
+  shuffle(teamNames);
+  const output = document.getElementById("output");
+  output.innerHTML = "";
+
+  teams.forEach((team, i) => {
+    let html = `<div class="team"><div class="team-title">${teamNames[i]}</div>`;
+
+    if (size === 3) {
+      html += `<div class="teamsheet">`;
+      team.forEach(p => {
+        html += `
+          <div>
+            <div class="player-icon"></div>
+            <div class="player-name">${p.includes("(G)") ? "🧤 " + p : p}</div>
+          </div>`;
+      });
+      html += `</div></div>`;
+    } else {
+      html += `<p>${team.join(", ")}</p></div>`;
+    }
+
+    output.innerHTML += html;
+  });
+}
 </script>
 </body>
 </html>
