--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Floorball Team Picker</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 /* --- Base Styles --- */
 body {
@@ -47,7 +48,7 @@ textarea, input {
   color: white;
 }
 
-/* --- Teamsheet Mode --- */
+/* --- Team Cards --- */
 .team {
   background: white;
   border: 1px solid #ddd;
@@ -63,12 +64,30 @@ textarea, input {
   margin-bottom: 10px;
 }
 
-.teamsheet {
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
+/* --- Formation Layout --- */
+.formation-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
-  text-align: center;
-  padding: 10px 0;
+}
+
+.row-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row-two {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.player-block, .row-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .player-icon {
@@ -76,7 +95,6 @@ textarea, input {
   height: 60px;
   background: #3a52a3;
   border-radius: 50%;
-  margin: auto;
 }
 
 .player-name {
@@ -165,11 +183,10 @@ function syncTextareaFromChips() {
 }
 
 function getPlayers() {
-  const textareaNames = document.getElementById("names").value
+  return document.getElementById("names").value
     .split(",")
     .map(n => n.trim())
     .filter(n => n.length);
-  return textareaNames;
 }
 
 function getSelectedGoalies() {
@@ -204,14 +221,14 @@ function generateTeams() {
     teams.push(players.splice(0, teamSize));
   }
 
-  // Distribute leftovers to teams evenly
+  // Distribute leftover players
   let idx = 0;
   while (players.length) {
     teams[idx % numTeams].push(players.shift());
     idx++;
   }
 
-  // Insert rotating goalies
+  // Assign goalies
   teams.forEach((team, i) => {
     if (selectedGoalies.length) {
       const goalie = selectedGoalies[i % selectedGoalies.length] + " (G)";
@@ -219,12 +236,11 @@ function generateTeams() {
     }
   });
 
-  // Render them
   renderTeams(teams, teamSize);
 }
 
 /* -----------------------------
-   Rendering Logic
+   Formation Rendering
 -------------------------------- */
 function renderTeams(teams, size) {
   const teamNames = [
@@ -235,29 +251,71 @@ function renderTeams(teams, size) {
   ];
 
   shuffle(teamNames);
+
   const output = document.getElementById("output");
   output.innerHTML = "";
 
   teams.forEach((team, i) => {
-    let html = `<div class="team"><div class="team-title">${teamNames[i]}</div>`;
+    let name = teamNames[i % teamNames.length];
 
-    if (size === 3) {
-      html += `<div class="teamsheet">`;
-      team.forEach(p => {
-        html += `
-          <div>
-            <div class="player-icon"></div>
-            <div class="player-name">${p.includes("(G)") ? "🧤 " + p : p}</div>
-          </div>`;
-      });
-      html += `</div></div>`;
-    } else {
-      html += `<p>${team.join(", ")}</p></div>`;
+    // Find goalie
+    const goalieIndex = team.findIndex(p => p.includes("(G)"));
+    let goalie = null;
+
+    if (goalieIndex >= 0) {
+      goalie = team.splice(goalieIndex, 1)[0];
     }
 
+    const [p1, p2, p3] = team; // 3 remaining
+
+    const goalieTop = i % 2 === 0;
+
+    let html = `<div class="team"><div class="team-title">${name}</div>`;
+    html += `<div class="formation-layout">`;
+
+    // TOP
+    html += centeredRow(goalieTop ? goalie : p1);
+
+    // MIDDLE
+    html += twoAcrossRow(p1, p2);
+
+    // BOTTOM
+    html += centeredRow(!goalieTop ? goalie : p3);
+
+    html += `</div></div>`;
     output.innerHTML += html;
   });
 }
+
+function centeredRow(player) {
+  return `
+    <div class="row-center">
+      <div class="player-icon"></div>
+      <div class="player-name">${formatPlayer(player)}</div>
+    </div>
+  `;
+}
+
+function twoAcrossRow(left, right) {
+  return `
+    <div class="row-two">
+      <div class="player-block">
+        <div class="player-icon"></div>
+        <div class="player-name">${formatPlayer(left)}</div>
+      </div>
+      <div class="player-block">
+        <div class="player-icon"></div>
+        <div class="player-name">${formatPlayer(right)}</div>
+      </div>
+    </div>
+  `;
+}
+
+function formatPlayer(p) {
+  if (!p) return "";
+  return p.includes("(G)") ? "🧤 " + p : p;
+}
 </script>
+
 </body>
 </html>
